--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-deploy",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://derekhctam.github.io/my-app",
+  "homepage": "https://derekhctam.github.io/my-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
